@@ -39,7 +39,7 @@ std::unique_ptr< http::server::request > fostlib::http::server::operator () () {
 
 namespace {
     bool service(
-        boost::function< bool ( http::server::request & ) > service_lambda,
+        std::function< bool ( http::server::request & ) > service_lambda,
         boost::asio::io_service *servicep,
         boost::asio::ip::tcp::socket *sockp
     ) {
@@ -92,14 +92,14 @@ namespace {
 }
 
 void fostlib::http::server::operator () (
-    boost::function< bool (http::server::request &) > service_lambda
+    std::function< bool (http::server::request &) > service_lambda
 ) {
     (*this)(service_lambda, return_false);
 }
 
 void fostlib::http::server::operator () (
-    boost::function< bool (http::server::request &) > service_lambda,
-    boost::function< bool (void) > terminate_lambda
+    std::function< bool (http::server::request &) > service_lambda,
+    std::function< bool (void) > terminate_lambda
 ) {
     // Create a worker pool to service the requests
     workerpool pool;
@@ -215,7 +215,7 @@ fostlib::http::server::request::request(
 fostlib::http::server::request::request(
     const string &method, const url::filepath_string &filespec,
     std::unique_ptr< binary_body > headers_and_body,
-    boost::function<void (const mime&, const ascii_string&)> handler
+    std::function<void (const mime&, const ascii_string&)> handler
 ) : m_handler(handler),
         m_method( method ), m_pathspec( filespec ),
         m_mime( headers_and_body.release() ) {
