@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2016,Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2009-2017,Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -229,7 +229,7 @@ namespace {
 
 void fostlib::pop3::iterate_mailbox(
     const host &host,
-    boost::function<bool (const text_body &)> destroy_message,
+    std::function<bool(const text_body &)> destroy_message,
     const string &username,
     const string &password
 ) {
