@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -26,7 +26,7 @@ namespace fostlib {
         /// Iterates through all of the emails in a POP3 mailbox
         FOST_INET_DECLSPEC void iterate_mailbox(
             const host &host,
-            boost::function<bool (const text_body &)> destroy_message,
+            std::function<bool(const text_body &)> destroy_message,
             const string &username,
             const string &password
         );
